couple of fixes, including game logic and view rendering

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,20 @@
+:root {
+  --primary-color: #0e130e;
+  --secondary-color: #b0da99;
+  --tertiary-color: #253125;
+
+  --accent-color: #58c3b5;
+  --text-color: #ebf6e5;
+}
+
+
 body {
   font-family: "Lekton";
   font-style: normal;
-  background-color: #0e130e;
+  background-color: var(--primary-color);
   margin: 0;
   padding: 0;
+  color: var(--text-color);
 }
 
 .wrap {
@@ -86,12 +97,11 @@ body {
 }
 
 .w-20 {
-  width: 20%!important;
+  width: 20% !important;
 }
 
 .w-100 {
   width: 100%;
-
 }
 
 .mt-1 {
@@ -109,7 +119,7 @@ body {
   align-self: center;
 }
 
-/* full container used in login/register page */
+
 .full-container {
   height: 100vh;
   width: 100vw;
@@ -124,7 +134,7 @@ h1 {
   font-size: 2em;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #ebf6e5;
+  color: var(--text-color);
 }
 
 .text-bold-sm {
@@ -133,10 +143,10 @@ h1 {
   line-height: 16px;
   letter-spacing: 0.05em;
   text-align: center;
-  color: #ebf6e5;
+  color: var(--text-color);
 }
 
-button.enter-button{
+button.enter-button {
   box-sizing: content-box;
 }
 
@@ -155,21 +165,21 @@ button.enter-button{
   font-size: 3em;
   text-align: center;
   letter-spacing: 0.1em;
-  color: #58c3b5;
+  color: var(--accent-color);
 }
 
 .main-text {
   font-weight: 700;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #ebf6e5;
+  color: var(--text-color);
 }
 
 .main-text-light {
   font-weight: 400;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #ebf6e5;
+  color: var(--text-color);
 }
 
 .input-description {
@@ -182,7 +192,7 @@ button.enter-button{
   font-size: 1.3em;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #ebf6e5;
+  color: var(--text-color);
 }
 
 .score-text {
@@ -190,14 +200,14 @@ button.enter-button{
   font-size: 1.7em;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #ebf6e5;
+  color: var(--text-color);
 }
 
 .progress-bar {
   min-width: 300px;
   max-width: 350px;
   display: flex;
-  background-color: #f3f3f3;
+  background-color: var(--text-color);
   border-radius: 5px;
   margin-bottom: 20px;
   box-sizing: border-box;
@@ -211,7 +221,6 @@ button.enter-button{
   border-radius: 5px 0px 0px 5px;
   text-align: center;
   line-height: 30px;
-  color: white;
 }
 
 .text-background {
@@ -238,13 +247,11 @@ button.enter-button{
   background: #555;
 }
 
-/* Custom scrollbar for Firefox */
 .text-background {
   scrollbar-width: auto;
-  scrollbar-color: #7eb292 #3a8563;
+  scrollbar-color: var(--accent-color) var(--tertiary-color);
 }
 
-/* Custom scrollbar for other browsers (fallback) */
 .text-background::-moz-scrollbar {
   width: 10px;
 }
@@ -269,7 +276,6 @@ button.enter-button{
   font-size: 4em;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #ebf6e5;
 }
 
 .read-text {
@@ -287,7 +293,6 @@ button.enter-button{
   line-height: 1.6em;
   text-align: center;
   letter-spacing: 0.1em;
-  color: #ebf6e5;
 }
 
 .option-text {
@@ -295,12 +300,10 @@ button.enter-button{
   font-size: 1.1em;
   text-wrap: wrap;
   letter-spacing: 0.07em;
-  color: #ebf6e5;
 }
 
 .option-container {
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   width: 100%;
   gap: 1em;
@@ -308,11 +311,11 @@ button.enter-button{
 }
 
 .option-container:hover input ~ .checkmark {
-  background-color: #58c3b5;
+  background-color: var(--accent-color);
 }
 
 .option-container input:checked ~ .checkmark {
-  background-color: #b0da99;
+  background-color: var(--secondary-color);
 }
 
 .option-container input:checked ~ .checkmark:after {
@@ -340,7 +343,7 @@ button.enter-button{
 }
 
 .tos-checkbox input[type="checkbox"]:checked .tos-checkbox {
-  background-color: #b0da99;
+  background-color: var(--secondary-color);
 }
 .tos-checkbox input[type="checkbox"]:checked ~ .tos-checkbox:after {
   display: block;
@@ -349,7 +352,7 @@ button.enter-button{
 .tos-checkbox:after {
   width: 5px;
   height: 10px;
-  border: solid white;
+  border: solid var(--text-color);
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -364,17 +367,17 @@ button.enter-button{
   min-height: 40px;
   border-radius: 50%;
 
-  border: 1px solid #58c3b5;
+  border: 1px solid var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
 }
 
 .option-container:hover input ~ .checkmark {
-  background-color: #58c3b5;
+  background-color: var(--accent-color);
 }
 
 .option-container input:checked ~ .checkmark {
-  background-color: #b0da99;
+  background-color: var(--secondary-color);
 }
 
 .option-container input:checked ~ .checkmark:after {
@@ -420,7 +423,7 @@ button.enter-button{
 .option-container .checkmark:after {
   width: 5px;
   height: 10px;
-  border: solid white;
+  border: solid var(--text-color);
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -428,7 +431,7 @@ button.enter-button{
 }
 
 .main-button {
-  background-color: #b0da99;
+  background-color: var(--secondary-color);
   color: #121d0b;
   border-radius: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -452,9 +455,8 @@ a.main-button {
 .main-button-style {
   text-transform: uppercase;
   background-color: transparent;
-  color: #ebf6e5;
   border-radius: 10px;
-  border: 2px solid #58c3b5;
+  border: 2px solid var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -465,15 +467,11 @@ a.main-button {
 .secondary-button {
   width: 200px;
   height: 65px;
-
   text-transform: uppercase;
   background-color: transparent;
-  color: #ebf6e5;
   border-radius: 10px;
-
-  border: 2px solid #58c3b5;
+  border: 2px solid var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.15em;
@@ -484,7 +482,6 @@ a.main-button {
   font-size: 1em;
   line-height: 1.3em;
   letter-spacing: 0.05em;
-  color: #ebf6e5;
 }
 
 .tos-text > a {
@@ -500,7 +497,7 @@ a.main-button {
 }
 
 i {
-  color: #65ccb8;
+  color: var(--accent-color);
 }
 
 .fa-gold {
@@ -517,14 +514,13 @@ i {
 
 .follow-bar i,
 .follow-bar-mobile i {
-  color: #ebf6e5;
+  color: var(--text-color);
   font-size: 1.2em;
 }
 
 .profile-column {
   max-width: 900px;
   min-width: 500px;
-  /* width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -533,7 +529,6 @@ i {
 .user-welcome {
   font-weight: 700;
   font-size: 3em;
-  color: #ebf6e5;
   text-transform: capitalize;
   margin-top: 0;
 }
@@ -544,7 +539,7 @@ i {
 
 .profile-picture {
   border-radius: 100%;
-  border: 1px solid #30fad3;
+  border: 1px solid var(--accent-color);
   box-shadow: inset 0px 5px 4px rgba(229, 229, 229, 0.25);
   display: flex;
   justify-content: center;
@@ -557,14 +552,12 @@ i {
 .join-date {
   font-weight: 700;
   font-size: 1.5em;
-  color: #ebf6e5;
   margin-top: 1em;
   text-align: center;
 }
 
 .information-header {
   width: 90%;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -573,14 +566,13 @@ i {
 .information-text {
   font-weight: 700;
   font-size: 1.5em;
-  color: #ebf6e5;
 }
 
 .view-all {
   font-weight: 700;
   font-size: 1.5em;
   text-decoration: none;
-  color: #58c3b5;
+  color: var(--accent-color);
 }
 
 .one-line-list {
@@ -603,17 +595,14 @@ i {
 .information-text {
   font-weight: 700;
   font-size: 1.5em;
-  color: #ebf6e5;
 }
 
 .achievement {
-  /* padding: 2em; */
-  /* border-radius: 100%; */
   border: none;
   padding: 0.5em 1em;
   background: #393c37;
   border-radius: 30px;
-  color: white;
+  color: var(--text-color);
 }
 
 .achievement:hover {
@@ -737,20 +726,20 @@ dialog {
   border-radius: 40px;
   max-width: 1000px;
   width: 80%;
-  color: #ddd;
-  background-color: #253125;
+  color: var(--text-color);
+  background-color:var(--tertiary-color);
   border: none;
   padding: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .main-button:hover {
-  background-color: #ebf6e5;
+  background-color: var(--text-color);
   transition: background-color 0.5s;
 }
 
 .secondary-button:hover {
-  background-color: #58c3b5;
+  background-color: var(--accent-color);
   transition: background-color 0.5s;
 }
 
@@ -877,7 +866,7 @@ menu {
 .follow-bar {
   display: flex;
   justify-content: end;
-  align-items: center;
+  align-items: normal;
   gap: 1em;
 }
 
@@ -931,10 +920,10 @@ form select {
   text-align: center;
   box-shadow: inset 0px 5px 6px 2px rgba(0, 0, 0, 0.12);
   background: rgba(236, 248, 243, 0.2);
-  color: #ebf6e5;
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
+  color: var(--text-color);
 }
 
 .cards-create {
@@ -1033,8 +1022,6 @@ form select {
     display: none !important;
   }
 
-
-
   .container {
     max-width: 940px !important;
     margin: 0 16px !important;
@@ -1058,6 +1045,7 @@ form select {
 }
 
 .container-card {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border: 2px solid transparent;
   background: linear-gradient(71deg, #091610, #121d0cc2, #0e1914);
   background-clip: padding-box;
@@ -1108,6 +1096,7 @@ form select {
 }
 
 .image-green-box {
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   position: relative;
 }
 
@@ -1130,7 +1119,6 @@ form select {
   font-weight: 700;
   font-size: 1.1em;
   line-height: 1.5em;
-  color: #ebf6e5;
 }
 
 .title {
@@ -1138,7 +1126,6 @@ form select {
   font-weight: 700;
   font-size: 1.2em;
   letter-spacing: 0.05em;
-  color: #ebf6e5;
   text-align: left;
 }
 
@@ -1148,7 +1135,6 @@ form select {
   line-height: 1.1em;
   font-size: 1em;
   overflow: hidden;
-  color: #ebf6e5;
   text-align: justify;
 }
 
@@ -1201,6 +1187,12 @@ form select {
   }
 }
 
+.enter-button:hover, .show-more-btn:hover {
+  background: var(--accent-color);
+  cursor: pointer;
+  transition: background-color 0.5s;
+}
+
 .enter-button {
   margin-top: 1em;
   text-decoration: none;
@@ -1209,7 +1201,7 @@ form select {
   border: 0;
   text-align: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  background: #b0da99;
+  background: var(--secondary-color);
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   font-style: normal;
@@ -1226,7 +1218,7 @@ form select {
   text-align: center;
   font-weight: 400;
   font-size: 1.2em;
-  color: white;
+  color: var(--text-color);
 }
 
 .add-quest {
@@ -1237,7 +1229,7 @@ form select {
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  border: 2px solid #b0da99;
+  border: 2px solid var(--secondary-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1251,10 +1243,9 @@ form select {
   align-content: center;
   text-align: center;
   background-color: #293324;
-  color: #ddd;
 }
 .add-quest i {
-  color: #b0da99;
+  color: var(--secondary-color);
 }
 
 .grid-2 {
@@ -1289,7 +1280,7 @@ textarea {
 
 .points {
   height: 50px;
-  width: 80%;
+  width: 98%;
   border-radius: 30px !important;
 }
 
@@ -1367,7 +1358,6 @@ textarea {
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #b0da9992;
-  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
