--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,3 +1,12 @@
+:root {
+  --primary-color: #0e130e;
+  --secondary-color: #b0da99;
+  --tertiary-color: #253125;
+
+  --accent-color: #58c3b5;
+  --text-color: #ebf6e5;
+}
+
 nav {
   position: fixed;
   width: 100vw;
@@ -6,23 +15,21 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #0e130e;
+  background-color: var(--dark-color);
   z-index: 100;
-
 }
 
 .active {
-  color: #58c3b5!important;
+  color: var(--accent-color) !important;
 }
 
 .mobile_logo {
   display: none;
 }
 
-.side-logo>img {
+.side-logo > img {
   width: 60%;
 }
-
 
 .menu-container {
   width: 80px;
@@ -43,7 +50,7 @@ body {
   line-height: 1.5em;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #58c3b5;
+  color: var(--accent-color);
   text-decoration: none;
 }
 
@@ -67,7 +74,7 @@ body {
   height: calc(100% - 70px);
   width: 300px;
   z-index: 1000;
-  background-color: #253125;
+  background-color: var(--tertiary-color);
   overflow-x: hidden;
   transform: translateX(-100%);
   transition: transform 0.5s ease;
@@ -79,7 +86,6 @@ body {
   gap: 1.5em;
   align-items: center;
 }
-
 
 .sidenav:nth-last-child(1) {
   justify-self: end;
@@ -145,14 +151,14 @@ body {
     gap: 1em;
   }
 
-  .follow-bar-mobile>* {
+  .follow-bar-mobile > * {
     width: 80%;
     display: inline-flex;
     gap: 1em;
     justify-content: space-between;
   }
 
-  .follow-bar-mobile>*:nth-child(1)>*:nth-child(1) {
+  .follow-bar-mobile > *:nth-child(1) > *:nth-child(1) {
     min-width: 100px;
     text-align: left;
   }
@@ -198,7 +204,7 @@ body {
   font-size: 1.2em;
   border: none;
   outline: none;
-  color: white;
+  color: var(--text-color);
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
@@ -214,7 +220,7 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #1b231b;
+  background-color: var(--tertiary-color);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 200;
@@ -228,7 +234,8 @@ body {
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: var(--text-color);
+  transition: background-color 0.5s;
 }
 
 .show {
