--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -15,8 +15,9 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--dark-color);
+  background-color: var(--primary-color);
   z-index: 100;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .active {
