--- a/public/css/style.css
+++ b/public/css/style.css
@@ -467,6 +467,12 @@ button.enter-button {
   letter-spacing: 0.15em;
 }
 
+
+button.main-button {
+  font-weight: 600;
+  font-size: 1em;
+}
+
 a.main-button {
   text-decoration: none;
   text-align: center;
@@ -495,7 +501,7 @@ a.main-button {
   border: 2px solid var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: 700;
-  font-size: 14px;
+  font-size: 1em;
   letter-spacing: 0.15em;
 }
 
